update todo list with some brainstormings from today
git-svn-id: svn://svn.zope.org/repos/main@60801 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/trunk/TODO.txt
+++ b/z3/Five/trunk/TODO.txt
@@ -7,7 +7,16 @@ v1.2
 
 * five:registerClass (yuppie)
 
-* event overhaul (efge)
+  - scope should probably be a Choice; default should naybe be None?
+
+  - cleanup can be an elegant list comprehension
+
+  - test the clean up in the doctest (see if it really cleans up)
+
+  - 'product': class_.__module__.split('.')[1] could throw a key error...?
+
+  - functional test that checks the ZMI if there really is an entry in
+    the add menu?
 
 * marker utility (whit, gotcha)
 
@@ -17,13 +26,16 @@ v1.2
 v1.3
 ----
 
+* remove certain entries from interfaces.zcml that are outdated (yuppie)
+
+* implement an IPhysicallyLocatable adapter for Zope 2 objects, make
+  OFS.Application.Application implement IContainmentRoot (in Zope 2.9)
+
 * port to Zope 3.2 (philikon)
 
 * test whether request with skin works properly (use ++skin++, applySkin, etc.)
 
 * remove testrunner (philikon)
-
-* drop zope 2.8 support (yuppie)
 
 * integrate into Zope 2.9 (philikon)
 
