--- a/z3/Five/trunk/CHANGES.txt
+++ b/z3/Five/trunk/CHANGES.txt
@@ -2,21 +2,22 @@
 Five Changes
 ============
 
-Trunk only
-==========
+Five 1.2b (2005-XXX-XXX)
+========================
 
 Features
 --------
 
-* five:registerClass directive: This does the necessary Zope 2 registration
-  for Five content. It is no longer necessary to add a initialize method to
-  the product's __init__. New objects can be added through the ZMI.
+* Added the five:registerClass directive: This does the necessary Zope
+  2 registration for Five-based content. This wa it is no longer
+  necessary to add an ``initialize()`` function to the product's
+  __init__ in order to register a meta type to be addable through the
+  ZMI.
 
-* Local site support: Five has now support for creating local sites and 
-  thereby local utilities. This is mostly needed for allowing CMF to convert
-  it's portal tools into local utilities.
-  See doc/local_sites.txt for more information 
-  (that is, when I have finished that piece of documentation /Regebro).
+* Local site support: Five has now support for creating local sites
+  and thereby local utilities. This is mostly needed for allowing CMF
+  to convert it's portal tools into local utilities.  See
+  doc/localsite.txt for more information
 
 Restructuring
 -------------
@@ -25,17 +26,17 @@ Restructuring
 
 * Removed backwards compatibility for Zope 2.7 and 2.8.0.
 
-* Added a (temporarily) forked copy of the "new-and-improved" test runner
-  and supporting 'zope.testing' package, lifted from
-  http://svn.zope.org/zope.testing.  This code should be removed for Five
-  1.3, which will use the updated version of 'zope.testing' in the Zope 2.9
-  / Zope 3.2 tree.
+* Added a (temporarily) forked copy of the "new-and-improved" test
+  runner and supporting 'zope.testing' package, lifted from
+  http://svn.zope.org/zope.testing.  This code should be removed for
+  Five 1.3, which will use the updated version of 'zope.testing' in
+  the Zope 2.9 / Zope 3.2 tree.
 
-* Moved the 'Five.testing' package down to 'Five.tests.testsing', in order
-  to make room for the 'zope.testing' code.
+* Moved the 'Five.testing' package down to 'Five.tests.testing', in
+  order to make room for the 'zope.testing' code.
 
-* Removed backwards compatibility for some moved classes (AddForm, EditForm, 
-  ContentAdding)
+* Removed backwards compatibility for some moved classes (AddForm,
+  EditForm, ContentAdding)
 
 Five 1.1 (2005-10-04)
 =====================
