- updated TODO.txt - improved descriptions and CHANGES.txt
git-svn-id: svn://svn.zope.org/repos/main@60896 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/trunk/TODO.txt
+++ b/z3/Five/trunk/TODO.txt
@@ -5,22 +5,16 @@ TODO
 v1.2
 ----
 
-* cleanup: reset cleanup lists
-
 * five:registerClass (yuppie)
-
-  - scope should probably be a Choice; default should naybe be None?
-
-  - cleanup can be an elegant list comprehension
-
-  - test the clean up in the doctest (see if it really cleans up)
-
-  - 'product': class_.__module__.split('.')[1] could throw a key error...?
 
   - functional test that checks the ZMI if there really is an entry in
     the add menu?
 
+  - update ViewsTutorial
+
 * marker utility (whit, gotcha)
+
+  - resolve testing conflict and re-enable five:traversable for Folder
 
 * make rendering of resource urls support sites?
 
