--- a/z3/Five/trunk/CHANGES.txt
+++ b/z3/Five/trunk/CHANGES.txt
@@ -8,11 +8,10 @@ Five 1.2b (2005-XXX-XXX)
 Features
 --------
 
-* Added the five:registerClass directive: This does the necessary Zope
-  2 registration for Five-based content. This wa it is no longer
-  necessary to add an ``initialize()`` function to the product's
-  __init__ in order to register a meta type to be addable through the
-  ZMI.
+* Added the five:registerClass directive: This does the necessary Zope 2
+  registration for Five-based content. It is no longer necessary to add an
+  ``initialize()`` function to the product's __init__ in order to register
+  a meta type to be addable through the ZMI.
 
 * Local site support: Five has now support for creating local sites
   and thereby local utilities. This is mostly needed for allowing CMF
