- mention the updated ViewsTutorial in CHANGES.txt
git-svn-id: svn://svn.zope.org/repos/main@60939 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/trunk/CHANGES.txt
+++ b/z3/Five/trunk/CHANGES.txt
@@ -11,7 +11,8 @@ Features
 * Added the five:registerClass directive: This does the necessary Zope 2
   registration for Five-based content. It is no longer necessary to add an
   ``initialize()`` function to the product's __init__ in order to register
-  a meta type to be addable through the ZMI.
+  a meta type to be addable through the ZMI. See doc/products/ViewsTutorial
+  for an example how to use the directive.
 
 * Local site support: Five has now support for creating local sites
   and thereby local utilities. This is mostly needed for allowing CMF
