not so mental note about a test case i need to review during the beta phase
git-svn-id: svn://svn.zope.org/repos/main@60973 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/trunk/TODO.txt
+++ b/z3/Five/trunk/TODO.txt
@@ -5,6 +5,8 @@ TODO
 v1.2
 ----
 
+* revisit the test_localsite/test_{get|query}NextSiteManager tests
+
 * i18n domain of site/managesite.pt?
 
 * i18n and translation of utilities/browser/*pt
