- removed views_details (no time to make them work with Five 1.3) - added getInterfaces and getInterfaceNames (don't show interfaces provided by the object twice)
git-svn-id: svn://svn.zope.org/repos/main@60983 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/trunk/TODO.txt
+++ b/z3/Five/trunk/TODO.txt
@@ -68,3 +68,5 @@ v1.4
 
 - top-level <require />, <allow /> directives as a ZCML spelling of
   allowModule, allowClass
+
+- marker utility: re-add 'views_details' that didn't make it in 1.2/1.3
