- converted MarkerUtility to MarkerInterfacesAdapter - added again a small zope.app.introspector dependency: interfaceToName is also available in Zope 3.2 - updated CHANGES.txt and TODO.txt
git-svn-id: svn://svn.zope.org/repos/main@61011 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/trunk/CHANGES.txt
+++ b/z3/Five/trunk/CHANGES.txt
@@ -8,6 +8,11 @@ Five 1.2b (2005-XXX-XXX)
 Features
 --------
 
+* Added IMarkerInterfaces adapter: This adapter provides methods for
+  inspecting and assigning marker interfaces. 'edit-markers.html' (or
+  'manage_interfaces' in the ZMI) allows to change the behavior of specific
+  objects by adding or removing marker interfaces TTW.
+
 * Added the five:registerClass directive: This does the necessary Zope 2
   registration for Five-based content. It is no longer necessary to add an
   ``initialize()`` function to the product's __init__ in order to register
