--- a/z3/Five/trunk/TODO.txt
+++ b/z3/Five/trunk/TODO.txt
@@ -5,8 +5,6 @@ TODO
 v1.2
 ----
 
-* revisit the test_localsite/test_{get|query}NextSiteManager tests
-
 * i18n domain of site/managesite.pt?
 
 * i18n and translation of utilities/browser/*pt
@@ -30,11 +28,11 @@ v1.2
 v1.3
 ----
 
-* port to Zope 3.2 (philikon)
+* fix site traversal issue (philikon)
+
+* fix object widget, list widget
 
 * test whether request with skin works properly (use ++skin++, applySkin, etc.)
-
-* remove testrunner (philikon)
 
 * integrate into Zope 2.9 (philikon)
 
@@ -43,6 +41,8 @@ v1.3
   - import interfaceToName from zope.app.component.interface
 
   - add 'manage_interfaces' to ZMI tabs in Zope 2.9 (yuppie)
+
+* revisit the test_localsite/test_{get|query}NextSiteManager tests
 
 v1.4
 ----
