--- a/z3/Five/trunk/CHANGES.txt
+++ b/z3/Five/trunk/CHANGES.txt
@@ -37,6 +37,12 @@ Restructuring
   Five 1.3, which will use the updated version of 'zope.testing' in
   the Zope 2.9 / Zope 3.2 tree.
 
+  There is a test runner invoking script in the ``Five`` package.  For
+  example, to run the Five tests with the new test runner, simply
+  execute the following command line from your instance home::
+
+    $ bin/zopectl run Products/Five/runtests.py -v -s Products.Five
+
 * Moved the 'Five.testing' package down to 'Five.tests.testing', in
   order to make room for the 'zope.testing' code.
 
