todo list for tomorrow
git-svn-id: svn://svn.zope.org/repos/main@61079 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/trunk/TODO.txt
+++ b/z3/Five/trunk/TODO.txt
@@ -5,6 +5,16 @@ TODO
 v1.2
 ----
 
+* update docs
+
+  - doc/localsite.txt
+
+  - doc/features.txt (local sites)
+
+  - doc/directives.txt (five:localsite)
+
+  - on the trunk: INSTALL.txt (Zope 2.9, Zope 3.2, Python 2.4.1)
+
 * i18n domain of site/managesite.pt?
 
 * i18n and translation of utilities/browser/*pt
