Moved all event monkey-patches to Zope itself (in Zope philikon-zope32-integration branch at the time of this writing, soon in Zope trunk and Zope 2.9).
Moved subscribers to a separate file to mitigate circular import
problems. This change will have to be backported to Five 1.2 so that
subscriber paths are the same in 1.2 and 1.3.



git-svn-id: svn://svn.zope.org/repos/main@61089 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/trunk/CHANGES.txt
+++ b/z3/Five/trunk/CHANGES.txt
@@ -24,6 +24,8 @@ Restructuring
   renamed to ``SimpleLocalUtilityRegistry``.  The old names are still
   available for a short period of time.
 
+* Event support: ``<five:containerEvents/>`` is the default.
+
 * XXX ObjectWidget (to be used instead of the Zope 3.2 one)
 
 * XXX mention interface BBB? Let yuppie decide
@@ -50,8 +52,13 @@ Features
   to convert it's portal tools into local utilities.  See
   doc/localsite.txt for more information
 
-* XXX Florent's event stuff (better put this under restructuring?
-  Florent decides.)
+* Event support: When ``<five:containerEvents/>`` is specified, Five
+  makes the standard Zope 2 containers send events instead of using
+  manage_afterAdd, manage_beforeDelete and manage_afterClone. These
+  methods are still called for a class declared
+  ``<five:deprecatedManageAddDelete class=.../>``, and are called in
+  compatibility mode with a deprecation warning for classes that don't
+  use this directive.
 
 Restructuring
 -------------
