--- a/z3/Five/trunk/INSTALL.txt
+++ b/z3/Five/trunk/INSTALL.txt
@@ -1,14 +1,14 @@
 How to install Five
 -------------------
 
-Requirements for Five 1.2
+Requirements for Five 1.3
 =========================
 
-* Zope 2.8.1+ with Python 2.3.x.
+* Zope 2.9+ with Python 2.4.1+
 
-Note that Five 1.0 is already part of Zope 2.8.  This doesn't matter,
-though, you can still install Five 1.2 into your Zope 2.8 instances.
-It will override Zope's older version of Five.
+Note that Five 1.3 is already part of Zope 2.9.  You can still install
+a newer Five version in your instance, if you like.  It will override
+the Five product inside the Zope tree.
 
 Running the tests
 =================
