Small cleanups, and Five 1.3 forward-compatibility for subscribers import location.
git-svn-id: svn://svn.zope.org/repos/main@61145 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/branch/Five-1.2/CHANGES.txt
+++ b/z3/Five/branch/Five-1.2/CHANGES.txt
@@ -2,8 +2,8 @@
 Five Changes
 ============
 
-Five 1.2b (2005-XXX-XXX)
-========================
+Five 1.2b (2005-11-01)
+======================
 
 Features
 --------
@@ -23,6 +23,14 @@ Features
   and thereby local utilities. This is mostly needed for allowing CMF
   to convert it's portal tools into local utilities.  See
   doc/localsite.txt for more information
+
+* Event support: When ``<five:containerEvents/>`` is specified, Five
+  makes the standard Zope 2 containers send events instead of using
+  manage_afterAdd, manage_beforeDelete and manage_afterClone. These
+  methods are still called for a class declared
+  ``<five:deprecatedManageAddDelete class=.../>``, and are called in
+  compatibility mode with a deprecation warning for classes that don't
+  use this directive.
 
 Restructuring
 -------------
