one last changes entry
git-svn-id: svn://svn.zope.org/repos/main@61152 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/trunk/CHANGES.txt
+++ b/z3/Five/trunk/CHANGES.txt
@@ -32,7 +32,9 @@ Restructuring
   make it work in Zope 2).  If you use the ObjectWidget, please change
   your imports to ``Products.Five.form.objectwidget.ObjectWidget``.
 
-* XXX mention interface BBB? Let yuppie decide
+* Backwards compatability for Zope 3-style interfaces of Zope 2
+  components has been removed as that functionality is now in the Zope
+  2 core as of Zope 2.9.
 
 Five 1.2b (2005-11-01)
 ======================
