somebody wasn't careful enough when replacing Five.testing with Five.tests.testing...
git-svn-id: svn://svn.zope.org/repos/main@61232 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/branch/Five-1.2/CHANGES.txt
+++ b/z3/Five/branch/Five-1.2/CHANGES.txt
@@ -189,7 +189,7 @@ Restructuring
 * The former test product, ``FiveTest``, was converted into separate
   modules that provide the mock objects for the corresponding tests
   and are located right next to them.  Common test helpers have been
-  moved to the Five.tests.testing package.  Overall, the testing framework
+  moved to the Five.testing package.  Overall, the testing framework
   was much simplified and the individual tests clean up after
   themselves much like they do in Zope 3.
 
