--- a/z3/Five/branch/Five-1.2/CHANGES.txt
+++ b/z3/Five/branch/Five-1.2/CHANGES.txt
@@ -74,9 +74,9 @@ Restructuring
 * Removed backwards compatibility for Zope 2.7 and 2.8.0.
 
 * Added a (temporarily) forked copy of the "new-and-improved" test
-  runner and supporting 'zope.testing' package, lifted from
+  runner and supporting ``zope.testing`` package, lifted from
   http://svn.zope.org/zope.testing.  This code should be removed for
-  Five 1.3, which will use the updated version of 'zope.testing' in
+  Five 1.3, which will use the updated version of ``zope.testing`` in
   the Zope 2.9 / Zope 3.2 tree.
 
   There is a test runner invoking script in the ``Five`` package.  For
@@ -85,8 +85,8 @@ Restructuring
 
     $ bin/zopectl run Products/Five/runtests.py -v -s Products.Five
 
-* Moved the 'Five.testing' package down to 'Five.tests.testing', in
-  order to make room for the 'zope.testing' code.
+* Moved the ``Five.testing`` package down to ``Five.tests.testing``,
+  in order to make room for the 'zope.testing' code.
 
 * Removed backwards compatibility for some moved classes (AddForm,
   EditForm, ContentAdding)
