- merged __browser_default__ fix
git-svn-id: svn://svn.zope.org/repos/main@61433 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/branch/Five-1.0/CHANGES.txt
+++ b/z3/Five/branch/Five-1.0/CHANGES.txt
@@ -5,6 +5,9 @@ Five Changes
 Five 1.0.3 (...)
 ================
 
+* Fixed bug that broke WebDAV access for five:defaultViewable objects. The
+  __browser_default__ now modifies only GET and POST requests.
+
 * FiveTraversable should only do a view lookup and not call the traverse 
   method of its superclass.
 
