--- a/z3/Five/branch/Five-1.2/CHANGES.txt
+++ b/z3/Five/branch/Five-1.2/CHANGES.txt
@@ -2,10 +2,23 @@
 Five Changes
 ============
 
-Five 1.3b (2005-11-02)
-======================
+Five 1.3b2 (2005-11-10)
+=======================
 
 This version is also included in Zope 2.9b1.
+
+Changes compared to Five 1.3b:
+
+Bugfixes
+--------
+
+* Fixed bug that broke WebDAV access for five:defaultViewable objects. The
+  __browser_default__ now modifies only GET and POST requests.
+
+* Fixed some event recursion compatibility modes.
+
+Five 1.3b (2005-11-02)
+======================
 
 Restructuring
 -------------
@@ -44,6 +57,8 @@ Bugfixes
 
 * Fixed bug that broke WebDAV access for five:defaultViewable objects. The
   __browser_default__ now modifies only GET and POST requests.
+
+* Fixed some event recursion compatibility modes.
 
 Five 1.2b (2005-11-02)
 ======================
