work around stupid reST formatting
git-svn-id: svn://svn.zope.org/repos/main@61545 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/trunk/INSTALL.txt
+++ b/z3/Five/trunk/INSTALL.txt
@@ -18,9 +18,9 @@ The following table shows which Five version can and should be used
 with which Zope 2 and Zope 3 versions.
 
 =========== ======================= =========== ========
-                    Zope 2.7         Zope 2.8   Zope 2.9
+.                   Zope 2.7         Zope 2.8   Zope 2.9
 ----------- ----------------------- ----------- --------
-            Zope X3 3.0 (not incl.) Zope X3 3.0 Zope 3.2
+.           Zope X3 3.0 (not incl.) Zope X3 3.0 Zope 3.2
 =========== ======================= =========== ========
 Five 1.0               X             included
 Five 1.1[#]            X                 X
