Fixed loops in zcml loading due to events in some cases, see
see
http://permalink.gmane.org/gmane.comp.web.zope.z3base.five/875
and
http://permalink.gmane.org/gmane.comp.web.zope.z3base.five/876



git-svn-id: svn://svn.zope.org/repos/main@61796 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/branch/Five-1.2/CHANGES.txt
+++ b/z3/Five/branch/Five-1.2/CHANGES.txt
@@ -60,6 +60,8 @@ Bugfixes
 
 * Fixed some event recursion compatibility modes.
 
+* Fixed loops in zcml loading due to events in some cases.
+
 Five 1.2b (2005-11-02)
 ======================
 
