--- a/z3/Five/trunk/INSTALL.txt
+++ b/z3/Five/trunk/INSTALL.txt
@@ -17,17 +17,17 @@ Compatability matrix
 The following table shows which Five version can and should be used
 with which Zope 2 and Zope 3 versions.
 
-=========== ======================= =========== ========
-.                   Zope 2.7         Zope 2.8   Zope 2.9
------------ ----------------------- ----------- --------
-.           Zope X3 3.0 (not incl.) Zope X3 3.0 Zope 3.2
-=========== ======================= =========== ========
-Five 1.0               X             included
-Five 1.1[#]            X                 X
-Five 1.2                                 X
-Five 1.3                                        included
-Five trunk                                          X
-=========== ======================= =========== ========
+============ ======================= =========== ========
+.                    Zope 2.7         Zope 2.8   Zope 2.9
+------------ ----------------------- ----------- --------
+.            Zope X3 3.0 (not incl.) Zope X3 3.0 Zope 3.2
+============ ======================= =========== ========
+Five 1.0                X             included
+Five 1.1[#]_            X                 X
+Five 1.2                                  X
+Five 1.3                                         included
+Five trunk                                           X
+============ ======================= =========== ========
 
 .. [#] This branch is no longer actively maintained.
 
