Cleaner security tests, use the proper APIs.
git-svn-id: svn://svn.zope.org/repos/main@61908 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/branch/Five-1.3/CHANGES.txt
+++ b/z3/Five/branch/Five-1.3/CHANGES.txt
@@ -2,6 +2,14 @@
 Five Changes
 ============
 
+Five 1.3 branch
+===============
+
+Restructuring
+-------------
+
+* Cleaned up security test.
+
 Five 1.3b3 (2005-11-19)
 =======================
 
