--- a/z3/Five/branch/Five-1.2/CHANGES.txt
+++ b/z3/Five/branch/Five-1.2/CHANGES.txt
@@ -2,6 +2,25 @@
 Five Changes
 ============
 
+Five 1.3 branch
+===============
+
+Restructuring
+-------------
+
+* Cleaned up security test.
+
+Five 1.3b3 (2005-11-19)
+=======================
+
+This version is also included in Zope 2.9b1.
+
+Bugfixes
+--------
+
+* Made the creation of custom skins work again.  It was broken in the
+  port to Zope 3.2.
+
 Five 1.3b2 (2005-11-10)
 =======================
 
@@ -61,6 +80,11 @@ Bugfixes
 * Fixed some event recursion compatibility modes.
 
 * Fixed loops in zcml loading due to events in some cases.
+
+Restructuring
+-------------
+
+* Cleaned up security test.
 
 Five 1.2b (2005-11-02)
 ======================
