--- a/z3/Five/branch/Five-1.2/CHANGES.txt
+++ b/z3/Five/branch/Five-1.2/CHANGES.txt
@@ -5,6 +5,11 @@ Five Changes
 Five 1.3 branch
 ===============
 
+Bugfixes
+--------
+
+* Made Five send a ContainerModifiedEvent when appropriate.
+
 Restructuring
 -------------
 
@@ -80,6 +85,8 @@ Bugfixes
 * Fixed some event recursion compatibility modes.
 
 * Fixed loops in zcml loading due to events in some cases.
+
+* Made Five send a ContainerModifiedEvent when appropriate.
 
 Restructuring
 -------------
