--- a/z3/Five/branch/Five-1.3/CHANGES.txt
+++ b/z3/Five/branch/Five-1.3/CHANGES.txt
@@ -2,8 +2,8 @@
 Five Changes
 ============
 
-Five 1.3 branch
-===============
+Five 1.3b4 (2005-11-25)
+=======================
 
 Restructuring
 -------------
