--- a/z3/Five/branch/Five-1.2/CHANGES.txt
+++ b/z3/Five/branch/Five-1.2/CHANGES.txt
@@ -2,29 +2,29 @@
 Five Changes
 ============
 
-Five 1.3 branch
-===============
+Five 1.3c (unreleased)
+======================
 
-Bugfixes
---------
-
-* Made Five send a ContainerModifiedEvent when appropriate.
+This version is also included in Zope 2.9b1.
 
 Restructuring
 -------------
 
-* Cleaned up security test.
+* (b4) Cleaned up security test.
 
-Five 1.3b3 (2005-11-19)
-=======================
-
-This version is also included in Zope 2.9b1.
+* (b4) Made Five send a ContainerModifiedEvent when appropriate.
 
 Bugfixes
 --------
 
-* Made the creation of custom skins work again.  It was broken in the
-  port to Zope 3.2.
+* (b3) Made the creation of custom skins work again.  It was broken in
+  the port to Zope 3.2.
+
+* (b2) Fixed bug that broke WebDAV access for five:defaultViewable
+  objects. The __browser_default__ now modifies only GET and POST
+  requests.
+
+* (b2) Fixed some event recursion compatibility modes.
 
 Five 1.3b2 (2005-11-10)
 =======================
