Added backward compatibility for old _setObject and _delObject implementations without suppress_events.
git-svn-id: svn://svn.zope.org/repos/main@62189 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/branch/Five-1.2/CHANGES.txt
+++ b/z3/Five/branch/Five-1.2/CHANGES.txt
@@ -17,6 +17,9 @@ Restructuring
 Bugfixes
 --------
 
+* (b6) Added backward compatibility for old _setObject and _delObject
+  implementations without suppress_events.
+
 * (b3) Made the creation of custom skins work again.  It was broken in
   the port to Zope 3.2.
 
