--- a/z3/Five/branch/Five-1.2/CHANGES.txt
+++ b/z3/Five/branch/Five-1.2/CHANGES.txt
@@ -10,6 +10,9 @@ This version is also included in Zope 2.9b1.
 Restructuring
 -------------
 
+* (b6) Added ``original`` parameter to ObjectCopiedEvent backported from
+  Zope 3.2
+
 * (b4) Cleaned up security test.
 
 * (b4) Made Five send a ContainerModifiedEvent when appropriate.
