Added monkey so that ++skin++ works with Zope <= 2.8.4
git-svn-id: svn://svn.zope.org/repos/main@62379 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/branch/Five-1.2/CHANGES.txt
+++ b/z3/Five/branch/Five-1.2/CHANGES.txt
@@ -99,6 +99,8 @@ Restructuring
 
 * Cleaned up security test.
 
+* Added monkey so that ++skin++ works with Zope <= 2.8.4.
+
 Five 1.2b (2005-11-02)
 ======================
 
