Port browser:addMenuItem directive from zope.app.publisher.browser/meta.zcml
git-svn-id: svn://svn.zope.org/repos/main@63077 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/trunk/CHANGES.txt
+++ b/z3/Five/trunk/CHANGES.txt
@@ -2,6 +2,14 @@
 Five Changes
 ============
 
+Five 1.4 (unreleased)
+=====================
+
+Features
+--------
+
+* Port browser:addMenuItem directive from zope.app.publisher.browser/meta.zcml
+
 Five 1.3c (2005-12-06)
 ======================
 
