Fix cleanup of five:traversable.
git-svn-id: svn://svn.zope.org/repos/main@63544 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/branch/Five-1.2/CHANGES.txt
+++ b/z3/Five/branch/Five-1.2/CHANGES.txt
@@ -17,6 +17,8 @@ Bugfixes
 
 * Made Five send a ContainerModifiedEvent when appropriate.
 
+* Fix cleanup of five:traversable.
+
 Restructuring
 -------------
 
