Backport r21750 from trunk: * If one class was set to have a localsite hook twice, removing the hook would be   attempted twice during the cleanup of unit tests, and the tests would fail.
git-svn-id: svn://svn.zope.org/repos/main@63560 62d5b8a3-27da-0310-9561-8e5933582275

--- a/z3/Five/branch/Five-1.2/CHANGES.txt
+++ b/z3/Five/branch/Five-1.2/CHANGES.txt
@@ -19,6 +19,10 @@ Bugfixes
 
 * Fix cleanup of five:traversable.
 
+* If one class was set to have a localsite hook twice, removing the
+  hook would be attempted twice during the cleanup of unit tests, and
+  the tests would fail.
+
 Restructuring
 -------------
 
