--- a/z3/Five/trunk/CHANGES.txt
+++ b/z3/Five/trunk/CHANGES.txt
@@ -16,6 +16,12 @@ Features
 
   NOTE: Anyone who copied the Five site.zcml to their
   $INSTANCE_HOME/etc/ directory is going to need to update it.
+  
+Bugs
+----
+
+* Unit tests that did i18n via Localizer would fail because the request 
+  attribute that keeps Localizers list of preferred languages did not exist. 
 
 Five 1.3.1 (2006-01-08)
 =======================
