--- a/z3/Five/branch/Five-1.3/CHANGES.txt
+++ b/z3/Five/branch/Five-1.3/CHANGES.txt
@@ -2,6 +2,15 @@
 Five Changes
 ============
 
+Five 1.3.2 (unreleased)
+=======================
+
+Bugfixes
+--------
+
+* Unit tests that did i18n via Localizer would fail because the request 
+  attribute that keeps Localizers list of preferred languages did not exist. 
+
 Five 1.3.1 (2006-01-08)
 =======================
 
